--- a/test.in
+++ b/test.in
@@ -1,12 +1,12 @@
-begin
-  integer k;
-  integer function F(n;
+beg
+  inte k;
+  integer function F(n)
     begin
       integer n;
       if n<=0 then F:=1
       else F:=n*F(n-1)
     end;
-  read(m;
+  read m);
   k:=F(m);
   write(k)
 end
